Bug 95181 - Xorg fails to load xgi driver: "Module xgi does not have a xgiModuleData"
Summary: Xorg fails to load xgi driver: "Module xgi does not have a xgiModuleData"
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/XGI (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium major
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2016-04-28 11:22 UTC by Alberto Bursi
Modified: 2016-04-28 19:28 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Alberto Bursi 2016-04-28 11:22:16 UTC
this is the relevant output in xorg's log (I'm on Debian Jessie, btw)

[  4231.318] (II) Loading /usr/lib/xorg/modules/drivers/xgi_drv.so
[  4231.319] (EE) LoadModule: Module xgi does not have a xgiModuleData
data object.


I looked around the code and found a missing _X_EXPORT.

This is the patch to fix the issue.


From da23418743ae8d865060e91f64a49f224ba232c2 Mon Sep 17 00:00:00 2001
From: Alberto Bursi <starshipeleven@outlook.com>
Date: Thu, 28 Apr 2016 13:14:41 +0200
Subject: [PATCH] fixed "Module xgi does not have a xgiModuleData"

---
 src/xgi_driver.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)

diff --git a/src/xgi_driver.c b/src/xgi_driver.c
index e76f5e2..15bda22 100644
--- a/src/xgi_driver.c
+++ b/src/xgi_driver.c
@@ -247,7 +247,7 @@ static XF86ModuleVersionInfo xgiVersRec = {
     {0, 0, 0, 0}
 };
 
-XF86ModuleData xgiModuleData = { &xgiVersRec, xgiSetup, NULL };
+_X_EXPORT XF86ModuleData xgiModuleData = { &xgiVersRec, xgiSetup, NULL };
 
 /*** static string ***/
 #ifdef XGIMERGED
-- 
2.1.4
Comment 1 Connor Behan 2016-04-28 19:28:33 UTC
Fixed by xf86-video-xgi commit 	754628ddefbf800d5b9122188070bf11aa71f126.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.