Fixed "Module xgi does not have a xgiModuleData"

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=95181
Reviewed-by: Connor Behan <connor.behan@gmail.com>